<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hr.fer.android.jmbag0036480345.CalculusActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etArg1"
                android:inputType="numberDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6" />

            <EditText
                android:id="@+id/etArg2"
                android:inputType="numberDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/button"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/radioGroup">

                <RadioButton
                    android:id="@+id/rbAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op1" />

                <RadioButton
                    android:id="@+id/rbSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op2" />

                <RadioButton
                    android:id="@+id/rbMul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op3" />

                <RadioButton
                    android:id="@+id/rbDiv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op4" />

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
